<resources>
    <string name="app_name">Daybreak</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="onboard_title">Welcome</string>
    <string name="onboard_subtitle">Take back the control of your life.</string>
    <string name="signin_button">Sign in</string>
    <string name="signup_button">Sign up</string>
    <string name="signin_title">Welcome</string>
    <string name="signin_subtitle">Nice to see you again.</string>
    <string name="signin_text">Sign in to continue</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_title">Create a daybreak account</string>
    <string name="signup_subtitle">Enter your user account information</string>
    <string name="signup_text">Sign up to continue</string>
    <string name="remember_me_checkbox">Remember me</string>
    <string name="verify_email_title">Please Verify Your Email\nAddress</string>
    <string name="verify_email_subtitle">We have sent a verification email to\n your email address. Please verify your email\nto login into the app.</string>
    <string name="weekly_recommendation_title">Weekly Recommendation:</string>
    <string name="weekly_recommendation_subtitle">Our weekly recommended picks</string>
    <string name="weekly_recommendation_card_title">Featured</string>
    <string name="weekly_recommendation_card_subtitle">Mind Before Matter - Jollie Choo</string>
    <string name="single_practice_title">Single Practice</string>
    <string name="single_practice_subtitle">Slow down, energy up</string>
    <string name="meditation_series_title">Meditation Series</string>
    <string name="meditation_series_subtitle">Go deeper into meditation</string>
    <string name="meditation_series_title_1">Sunrise Vibe</string>
    <string name="meditation_series_duration_1">1 Hour • Singles</string>
    <string name="meditation_series_description_1">The day had begun on a bright note. The sun finally peeked through the rain for the first time in a week, and the birds were singing in its warmth. There was no way to anticipate what was about to happen. It was a worst-case scenario and there was no way out of it.</string>
    <string name="meditation_series_title_2">Doors of Life</string>
    <string name="meditation_series_duration_2">2 Hour • Singles</string>
    <string name="meditation_series_description_2">Devon couldn\'t figure out the color of her eyes. He initially would have guessed that they were green, but the more he looked at them he almost wanted to say they were a golden yellow. Then there were the flashes of red and orange that seemed to be streaked throughout them. It was almost as if her eyes were made of opal with the sun constantly glinting off of them and bringing out more color. They were definitely the most unusual pair of eyes he\'d ever seen.</string>
    <string name="meditation_series_title_3">The Night Sky</string>
    <string name="meditation_series_duration_3">15 Min • Singles</string>
    <string name="meditation_series_description_3">It was a weird concept. Why would I really need to generate a random paragraph? Could I actually learn something from doing so? All these questions were running through her head as she pressed the generate button. To her surprise, she found what she least expected to see.</string>
    <string name="selected_mix_title_1">Spring Ambience (Seasonal Sensation Series)</string>
    <string name="selected_mix_duration_1">20 Min • Series</string>
    <string name="selected_mix_description_1">It\'s spring with tulips. Tulips are in full bloom in the creek garden. Everyone be happy to see tulips swaying gently in the spring breeze.</string>
    <string name="selected_mix_title_2">Summer Ambience (Seasonal Sensation Series)</string>
    <string name="selected_mix_duration_2">20 Min • Series</string>
    <string name="selected_mix_description_2">Enjoy this lazy summer afternoon ambience with 8 hours of gentle river and bird sounds for relaxation, meditation, reading, or studying. Let your shoulders soften and take a few deep breaths as you settle into this peaceful summer day in the countryside. Watch the butterflies dance through the swaying grass beneath the rustling leaves as a river gently flows by. Listen to the gentle sounds of rippling water, singing birds, and a soft summer breeze.</string>
    <string name="selected_mix_title_3">Autumn Ambience (Seasonal Sensation Series)</string>
    <string name="selected_mix_duration_3">20 Min • Series</string>
    <string name="selected_mix_description_3">Enjoy this cozy fall coffee shop bookstore ambience with relaxing rain sounds and jazz music for studying, relaxation, and sleep. It\'s a rainy autumn night and you’re at your favorite bookstore. Watch falling leaves and listen to the soothing sounds of heavy rain, smooth jazz, and ambient coffee shop noise including soft conversation and gentle clinks of dishes. This dimly lit late night cafe ASMR ambience is perfect for improved focus for work, reading, or studying, or to help with relaxation, meditation, and sleeping.</string>
    <string name="selected_mix_title_4">Winter Ambience (Seasonal Sensation Series)</string>
    <string name="selected_mix_duration_4">20 Min • Series</string>
    <string name="selected_mix_description_4">Sit back and relax on a cozy porch in the winter mountains while admiring lots of beautiful falling snow. You can warm up and fall asleep to the sound of a crackling fireplace or read a book and study. Enjoy cozy beautiful winter in snowy mountains.</string>
    <string name="selected_mix_title_5">River and Rainforest sounds for relaxation (Sounds of Nature)</string>
    <string name="selected_mix_duration_5">10 Hours • Series</string>
    <string name="selected_mix_description_5">This video features 10 Hours of rain sounds for sleep or for studying. A white noise sound, like jungle rain, effectively blocks out distracting noises. It\'s calming to listen to a rain storm inside the warmth of a home, school or office, while envisioning it raining heavily outside. Rainy weather truly provides a great sleep noise and relaxing study sounds.</string>
    <string name="selected_mix_title_6">Beach and seaside sounds for relaxation (Sounds of Nature)</string>
    <string name="selected_mix_duration_6">11 Hours • Series</string>
    <string name="selected_mix_description_6">A wonderful experience of sleeping beside the ocean with waves rolling next to your bed. High quality stereo ocean sounds, better than any sleep music will provide a great relaxing atmosphere for deep sleeping. All you need to do is playing this video and listen to the waves. All of you sleepyheads will enjoy the full 11 hours of sleep, just make yourself comfortable in bed, close your eyes and think about this place. You may also play any sleep music you like or just leave the sounds of the waves. Sweet dreams!</string>
    <string name="selected_mix_title_7">Mellow city night sounds for relaxation (Sounds of Nature)</string>
    <string name="selected_mix_duration_7">10 Hours • Series</string>
    <string name="selected_mix_description_7">City soundscape of Midtown New York City in binaural audio. This is a view of 33rd street from my hotel room in the evening. The audio is not looped and recorded on location. This recording features sirens, construction,  people, traffic sounds, and more. Sounds can be used for sleep, study or entertainment. There\'s also a bit of white noise. Thank you for your support. Enjoy!</string>
    <string name="selected_mix_title_8">Introduction to Astronomy [ASMR] (Smart Sleepers Collection)</string>
    <string name="selected_mix_duration_8">1 Hour • Series</string>
    <string name="selected_mix_description_8">Astronomy has unlocked much of the cosmos. Let\'s find out the basic discoveries, epiphanies, and deductions that will help us average folk understand the Universe more deeply. Thanks for watching.</string>
    <string name="selected_mix_title_9">French History [ASMR] (Smart Sleepers Collection)</string>
    <string name="selected_mix_duration_9">1 Hour • Series</string>
    <string name="selected_mix_description_9">I will include the Napoleonic Wars into the story, until 1815. As an introduction, I discuss the various interpretations of the Revolution that co-existed over the past 2 centuries. I hope you will find it informative. Take care.</string>
    <string name="selected_mix_title_10">Mathametics [ASMR] (Smart Sleepers Collection)</string>
    <string name="selected_mix_duration_10">1 Hour • Series</string>
    <string name="selected_mix_description_10">Solving relaxing and brain-tingling maths problems in ASMR to help you sleep and get tingles! From integration, to statistics and geometry - join me as I try some ASMR Maths!</string>
    <string name="cinderella_description">When Cinderella\'s dream of attending the Royal Ball and meeting the Grand Duke is hindered by her cruel stepmother, she gets some astounding help from her Fairy Godmother.</string>
    <string name="jack_and_the_beanstalk_description">A children\'s story. Jack, a poor country boy, trades the family cow for a handful of magic beans, which grow into an enormous beanstalk reaching up into the clouds. Jack climbs the beanstalk and finds himself in the castle of an unfriendly giant</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
</resources>