<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            app:srcCompat="@drawable/logo_daybreak2" />

        <TextView
            android:id="@+id/signin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/poppins"
            android:text="@string/signin_title"
            android:textColor="#000000"
            android:textFontWeight="900"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/signin_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="-7.5dp"
            android:layout_marginBottom="7.5dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/signin_subtitle"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/signin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/signin_text"
            android:textSize="14sp" />

        <!-- Email field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/Widget.DayBreak.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="Email"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/Widget.DayBreak.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:helperTextEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Remember me  and forgot password-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp">

            <CheckBox
                android:id="@+id/save_login_checkbox"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/remember_me_checkbox"
                android:textSize="13dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_password_button"
                style="@style/Widget.DayBreak.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/roboto_light"
                android:padding="0dp"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textSize="13dp" />
        </RelativeLayout>

        <!-- Button for sign in -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/light_green"
            android:fontFamily="@font/roboto_light"
            android:onClick="onClick"
            android:text="@string/signin_button"
            android:textAllCaps="false"
            app:backgroundTint="@color/light_green"
            app:cornerRadius="8dp" />
    </LinearLayout>
</ScrollView>