<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OnboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Image -->
            <ImageView
                android:id="@+id/onboard_image"
                android:layout_width="match_parent"
                android:layout_height="650dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/onboard_background_image3" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="30dp">

                <TextView
                    android:id="@+id/onboard_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/onboard_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textFontWeight="600"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/onboard_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/onboard_subtitle"
                    android:textAlignment="center"
                    android:textColor="#333333"
                    android:textFontWeight="600"
                    android:textSize="14dp" />
            </LinearLayout>
        </RelativeLayout>

        <!-- Register and Sign in buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                style="@style/Widget.DayBreak.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#6FAEA2"
                android:fontFamily="@font/roboto"
                android:padding="15dp"
                android:text="@string/signin_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13dp"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                style="@style/Widget.DayBreak.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-15dp"
                android:fontFamily="@font/roboto"
                android:padding="15dp"
                android:text="@string/signup_button"
                android:textAllCaps="false"
                android:textSize="13dp"
                app:cornerRadius="30dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>